Move time - frequency mapping to direct only